prep for Maven Central upload

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
-*.DS_Store
-target/
+*.class
+build/bundles/
+build/classes/
+build/dependency-cache/
+build/docs/
+build/generated/
+build/incremental/
+build/intermediates/
+build/poms/
+build/reports/
+build/resources/
+build/source/
+build/tests/
+build/test-results/
+build/tmp/
+build/ivy.xml
+build/lint*
 bin/
 gen/
-doc/
+libs/
+.gradle
 .settings/
-res/values/settings.xml
+.settings/org.eclipse.jdt.core.prefs
