reset() preferences method ; better .ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,9 @@
 *.class
-build/bundles/
-build/classes/
-build/dependency-cache/
-build/docs/
-build/generated/
-build/incremental/
-build/intermediates/
-build/poms/
-build/reports/
-build/resources/
-build/source/
-build/tests/
-build/test-results/
-build/tmp/
-build/ivy.xml
-build/lint*
+build/
 bin/
 gen/
 libs/
 .gradle
 .settings/
 .settings/org.eclipse.jdt.core.prefs
+*.iml
