--- a/build.gradle
+++ b/build.gradle
@@ -3,22 +3,22 @@ buildscript {
       mavenCentral()
    }
    dependencies {
-      classpath 'com.android.tools.build:gradle:1.2.3'
+      classpath 'com.android.tools.build:gradle:2.0.0-beta5'
    }
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
     
     defaultConfig {
-        targetSdkVersion 21
+        targetSdkVersion 23
         minSdkVersion 8
     }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:support-v4:23.2.0'
 }
