--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,5 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:${rootProject.ext.supportLibsVersion}"
+    implementation "com.android.support:support-v4:${rootProject.ext.supportLibsVersion}"
 }
