--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,5 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:support-v4:${rootProject.ext.supportLibsVersion}"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
