--- a/build.gradle
+++ b/build.gradle
@@ -1,44 +1,29 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-// Define the versions below in your root gradle file so that all modules match.
-// The root gradle definitions should look like:
-
-//ext {
-//    compileSdkVersion = 28
-//    targetSdkVersion = 28
-//    minSdkVersion = 9
-//    kotlin_version =
-//}
-
-// If you don't want to use defines,
-// you can instead modify this file to use the desired values directly.
-
-android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-
-    kotlinOptions {
-        jvmTarget = '1.8'
+buildscript {
+    ext.kotlin_version = '1.3.71'
+    repositories {
+        google()
+        jcenter()
+        
     }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-    defaultConfig {
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        minSdkVersion rootProject.ext.minSdkVersion
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        
+    }
+}
 
-    testImplementation 'junit:junit:4.12'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.1'
-    androidTestImplementation 'androidx.test:core-ktx:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
